# python-musixmatch

./: .coveragerc  .flake8  .pre-commit-config.yaml  .travis.yml  LICENSE  Makefile  Pipfile  README.md  pyproject.toml  runtests  setup.py
.github/: dependabot.yml
.github/workflows/: python-package.yml  python-publish.yml  pythonpackage.yml
musixmatch/: __init__.py  musixmatch.py  utils.py
pymusixmatch/: __init__.py  enums.py  musixmatch.py
tests/: conftest.py  results.py  test_musixmatch.py  test_utils.py  test_version.py  tests.py
