[tool.poetry]
name = "python-musixmatch"
version = "0.1.0"
description = "Simple integrate of API musixmatch.com with python"
authors = ["Hudson Brendon <contato.hudsonbrendon@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
black = "^21.12b0"
flake8 = "^4.0.1"
isort = "^5.10.1"
python-decouple = "^3.5"
pytest = "^6.2.5"
requests-mock = "^1.9.3"
requests = "^2.27.1"
coverage = "^6.2"
yesqa = "^1.3.0"
pylint = "^2.12.2"
autoflake = "^1.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
