[tool.poetry]
name = "pymusixmatch"
version = "0.1.4"
description = "Simple integrate of API musixmatch.com with python"
authors = ["Hudson Brendon <contato.hudsonbrendon@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.32.3"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
pytest-cov = "^6.0.0"
requests-mock = "^1.12.1"
ruff = ">=0.8.4,<0.10.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
